# interview-practice-problems

./: CMakeLists.txt  README.md  main.cpp  model.py  notes.docx  problem_01.cpp
algorithms/: BinarySearch.h  ComputeWords.cc  ComputeWords.h  LinearSearch.h
datafile-handling/: SearchTextInDatafile.h
programs/: app.cc  app.h  length.cc  length.h
